k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: arqan-gitlab
spec:
  type: ClusterIP
  selector:
    app: arqan-gitlab
  ports:
  - port: 8080
    targetPort: http
